k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lodestar
  labels:
    app.kubernetes.io/part-of: lodestar
    app.kubernetes.io/managed-by: kustomize
